fixed all bugs on mobile devices

--- a/Pages/Dashboard-Client/styles.css
+++ b/Pages/Dashboard-Client/styles.css
@@ -98,11 +98,6 @@ hr {
   .layout .content {
     padding: 12px 30px;
     display: flex;
-    align-items: center;
-  }
-  .layout .content > div {
-    align-items: center;
-    text-align: center;
   }
 }
 
@@ -114,10 +109,6 @@ hr {
   -webkit-box-shadow: 9px -1px 33px -5px rgba(0, 0, 0, 0.35);
   -moz-box-shadow: 9px -1px 33px -5px rgba(0, 0, 0, 0.35);
   box-shadow: 9px -1px 33px -5px rgba(0, 0, 0, 0.35);
-}
-
-.sidebar::-webkit-scrollbar-thumb {
-  border-radius: 4px;
 }
 
 .sidebar:hover::-webkit-scrollbar-thumb {
@@ -156,6 +147,7 @@ hr {
   max-height: 100%;
   min-height: 100%;
   min-height: 100%;
+  overflow-x: hidden;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -529,7 +521,7 @@ hr {
 }
 
 .layout .sidebar.collapsed .username {
-  display: unset;
+  display: unset !important;
 }
 
 .user-settings {
@@ -637,7 +629,7 @@ hr {
   justify-content: flex-start;
   align-content: flex-start;
   gap: 50px;
-  margin-bottom: 75px;
+  padding-bottom: 75px;
 }
 
 .server-card {
